<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FeedMe</string>

    <string name="label" tools:ignore="MissingTranslation">Rättens rubrik</string>

    <string name="my_profile">Min profil</string>
    <string name="firstname">Förnamn</string>
    <string name="address">Adress</string>
    <string name="lastname">Efternamn</string>
    <string name="postalCode">Postnummer</string>
    <string name="city">Ort</string>
    <string name="phoneNumber">Telefonnummer</string>
    <string name="mail">Meljadress</string>
    <string name="userName">Användarnamn</string>
    <string name="required">* Obligatorisk</string>
    <string name="allergies">Mina allergier</string>
    <string name="save">Spara</string>
    <string name="wrongInput">Felaktig inmatning, kontrollera att du fyllt i korrekta uppgifter</string>
    <string name="saveSuccess">Sparat</string>
    <string name="yourOrder">Din beställning:</string>
    <string name="deliveryPrice">Pris för utkörning</string>
    <string name="deliveryArea">område</string>
    <string name="deliveryPriceAmount">0 Kr</string>
    <string name="leftTofreeDelivery">Bara 0 Kr fattas för fri leverans</string>
    <string name="totalPrice">Total :</string>
    <string name="glutenFree">Glutenfri</string>
    <string name="lactoseFree">Laktos fri</string>
    <string name="vegan">Vegansk</string>
    <string name="vegetarian">Vegetarisk</string>
    <string name="preliminaryWaitTime">Preliminär väntetid</string>
    <string name="messageToRestaurant">Meddelande till restaurangen</string>
    <string name="characters">33/350 tecken</string>
    <string name="extraInfoToRestaurant">Snälla gör diavolon extra stark!!</string>
    <string name="checkout">Slutför</string>
    <string name="waitingTime">45 min</string>

    <string name="dishName">Matens namn</string>
    <string name="description">Beskrivning</string>
    <string name="type_of_food">Typ av Mat</string>
    <string name="food_contains_naturally">Maten är i sin vanlig form</string>

    <string name="soy_free">Sojafri</string>

    <string name="nut_free">Nötfri</string>
    <string name="free_from_sea_food">Fri från fisk/skaldjur</string>
    <string name="egg_free">Äggfri</string>

    <string name="lchf">LCHF</string>
    <string name="can_be_made_as">Rätten kan även göras</string>
    <string name="extra_cost">till en extrakostnad av</string>
    <string name="kr">kr</string>
    <string name="price">Pris</string>
    <string name="only_if_relevant">Fyll bara i om relevant</string>
    <string name="normal">Normal</string>
    <string name="smal">Liten</string>
    <string name="big">Stor</string>
    <string name="add">Lägg till</string>
    <string name="specials">Special</string>
    <string name="ordersHeader">- ORDRAR</string>
    <string name="orderTime">Ordern lagd:</string>
    <string name="readyForPickup">Redo att hämtas</string>
    <string name="delayed">Försenad</string>
    <string name="sendMessage">Skicka meddelande</string>
    <string name="cutomerNr">Kundnr:</string>
    <string name="orderViewPhoneNumber">Telefonnummer:</string>
    <string name="chosenDelivery">Valt leveranssätt:</string>
    <string name="customerInfo">Kund info</string>
    <string name="edit">Ändra</string>
    <string name="ongoingDeliveries">Pågående leveranser</string>
    <string name="favouriteRestaurants">Favorit restauranger</string>
    <string name="favouriteMeals">Favoritmaträtter</string>
    <string name="orderHistory">Order historik</string>
    <string name="seeMore">Se fler</string>
    <string name="noDeliveries">Inga pågående leveranser</string>
    <string name="noOrderHistory">Du har inte gjort någon beställning ännu</string>
    <string name="content_description_media">MediaDescription</string>
    <string name="OrgNr">OrgNr</string>
    <string name="default_notification_channel_id">Notiser</string>
    <string name="yourInfo">Dina uppgifter</string>
    <string name="anotherAddress">Till en annan adress</string>
    <string name="paymentMethod">Välj betalningsmetod</string>
    <string name="klarna">Klarna</string>
    <string name="swish">Swish</string>
    <string name="bankCard">Bankkort</string>
    <string name="finishOrder">Slutför beställning</string>
    <string name="paypal">PayPal</string>
    <string name="orderConfirmation">Orderbekräftelse</string>
    <string name="deliveryAddress">Leveransadress</string>
    <string name="paidWith">"Betalat med "</string>
    <string name="favouriteDishes">Favoritmaträtter</string>
    <string name="estimatedDelivery">"Beräknad leverans: "</string>
    <string name="updateChanges">Uppdatera mina val</string>
    <string name="orderType">Typ av order:</string>
    <string name="toOrders">Visa ordrar</string>
    <string name="size">Storlek</string>
    <string name="drinkName">Dryck</string>
    <string name="maincourses">Huvudrätter</string>
    <string name="desserts">Desserer</string>
    <string name="drinks">Dryck</string>
    <string name="starters">Förrätter</string>
    <string name="title">Ett erbjudande</string>
    <string name="message">Meddelande</string>
    <string name="servicedesc">En tjänst för firebase notifications</string>
    <string name="selectDelivery">Välj leveranssätt</string>
    <string name="homeDelivery">Hemleverans</string>
    <string name="deliveryPickup">Hämta själv</string>
    <string name="deliveryEatAtRest">Ät på restaurangen</string>
    <string name="msg_token_fmt">FCM registration token recieved</string>
    <string name="messageNoNotifications">The app will not show any notifications</string>

</resources>