<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".AddNChangeDrinks">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/text1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddDrinkLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/drinkName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddDrinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DrinkSizeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="125dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrinkTypeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DrinkSizeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DrinkTypeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="185dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="Typ av drink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddDrinkLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddDrinkTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DrinkPriceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="125dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/price"
        app:layout_constraintStart_toEndOf="@+id/DrinkSizeLayout"
        app:layout_constraintTop_toBottomOf="@+id/DrinkTypeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DrinkPriceEditText"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_addDrinkAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrinkSizeLayout" />

    <Button
        android:id="@+id/btn_finishAddDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="klar"
        app:layout_constraintStart_toEndOf="@+id/btn_addDrinkAdmin"
        app:layout_constraintTop_toBottomOf="@+id/DrinkPriceLayout" />

    <ImageButton
        android:id="@+id/iB_deleteDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addDrinkAdmin"
        app:srcCompat="@drawable/ic_baseline_delete_24" />
    <TextView
        android:id="@+id/tv_FooterAdddrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="FOOTER"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ibtn_home_drinksadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibtn_home_drinksadd"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />
    <ImageView
        android:id="@+id/addDrinkBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_left_24" />
</androidx.constraintlayout.widget.ConstraintLayout>